# memslicer

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/memslicer/: cli.py  cli_behavior.py  cli_emu.py  cli_symbex.py  cli_sysctx.py
src/memslicer/acquirer/: bridge.py  engine.py  frida_bridge.py  gdb_bridge.py  identity.py  lldb_bridge.py  platform_detect.py
src/memslicer/acquirer/collectors/: ios.py  linux.py  windows.py
src/memslicer/behavior/: __init__.py  dataflow.py  elf.py  events.py  graph.py  pe.py  probes.py  resolver.py  speakeasy_backend.py  stublib.py  stubs.py  syscalls.py  tracer.py
src/memslicer/emu/: __init__.py  engine.py  loader.py
src/memslicer/msl/: compression.py  constants.py  iterator.py  types.py  writer.py
src/memslicer/symbex/: __init__.py  angr_loader.py
tests/: conftest.py  test_behavior.py  test_cap_bitmap.py  test_cli_behavior.py  test_cli_system_context.py  test_collectors_android.py  test_collectors_darwin.py  test_collectors_fallback.py  test_collectors_ios.py  test_collectors_linux.py  test_collectors_windows.py  test_compression.py  test_connection_byte_order.py  test_constants.py  test_dataflow.py  test_emu.py  test_engine.py  test_engine_attribution.py  test_frida_acquirer.py  test_frida_bridge.py  test_frida_remote_collector.py  test_gdb_bridge.py  test_graph_export.py  test_hash_algo.py  test_investigation_e2e.py  test_linux_connectivity.py  test_linux_rootkit_posture.py  test_lldb_bridge.py  test_memslicer_enrich_cli.py  test_module_list_index_manifest.py  test_msl_iterator.py  test_msl_writer.py  test_os_detail_packing.py  test_probes.py  test_process_identity_layout.py  test_roundtrip.py  test_speakeasy_backend.py  test_spec_compliance.py  test_stublib.py  test_symbex.py  (+2 more)
tools/: README.md  example_graph.json  graph_viewer.html
